Fix: make text on content block type selector more visible (on hover)

--- a/app/javascript/schools/courses/components/curriculum_editor/CurriculumEditor__ContentBlockCreator.css
+++ b/app/javascript/schools/courses/components/curriculum_editor/CurriculumEditor__ContentBlockCreator.css
@@ -56,7 +56,7 @@
 }
 
 .content-block-creator__block-content-type-picker:hover {
-  @apply text-primary-300;
+  opacity: 0.75;
   transition: all 0.2s;
 }
 
